Fix bug where incorrect var resulted in wrong spacing left of hamburger

--- a/app/styles/_navbar-vertical.less
+++ b/app/styles/_navbar-vertical.less
@@ -20,7 +20,7 @@
   border-bottom: 1px solid @project-bar-border-color;
   border-top: none;
   min-height: 0;
-  @media(min-width: @screen-xs-max) {
+  @media(min-width: @screen-sm-min) {
     padding-left: 20px;
   }
   .dropdown-menu:after {
